objects/SBQQ__WebQuote__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer account. Defaulted on create from the opportunity.</description>
        <inlineHelpText>Customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount additionally discounted on this quote manually.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>Indicates quantity in each batch if products are sold in batches.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bill To address.</description>
        <inlineHelpText>Name for the Bill To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>Roll up summary of the Customer Amount.</description>
        <inlineHelpText>Roll up summary of the Customer Amount.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__WebQuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__WebQuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. You'll be able to override this value at individual line item level. Any line items that don't have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional  Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DaysQuoteOpen__c</fullName>
        <description>Number of days the quote has been open.</description>
        <formula>if(OR(ISPICKVAL( SBQQ__Status__c ,"Draft" ),ISPICKVAL( SBQQ__Status__c ,"In Review"),ISPICKVAL( SBQQ__Status__c , "Approved"), ISPICKVAL( SBQQ__Status__c , "Presented")),Round(NOW() - CreatedDate,0) ,null)</formula>
        <inlineHelpText>Number of days the quote has been open.</inlineHelpText>
        <label>Days Quote Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on "Generate Document" screen.</description>
        <inlineHelpText>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on "Generate Document" screen.</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products in this quote.</description>
        <inlineHelpText>Method used to deliver products in this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount that applies to this quote unless overridden on line item level.</description>
        <inlineHelpText>Distributor discount that applies to this quote unless overridden on line item level.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentId__c</fullName>
        <description>ID of the Document record which contains the generated document.</description>
        <inlineHelpText>ID of the Document record which contains the generated document.</inlineHelpText>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EmailTemplateId__c</fullName>
        <description>ID of email template that will be pre-populated when documents generated from this quote are emailed.</description>
        <inlineHelpText>If you have a specific email template to use for documents generated and emailed from this quote, enter the email template ID here.</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Date after which the Quote is no longer valid.</description>
        <inlineHelpText>Date after which the Quote is no longer valid.</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__FirstSegmentTermEndDate__c</fullName>
        <description>Used with multi-segment Products to prorate first segment.</description>
        <inlineHelpText>Used with multi-segment Products to prorate first segment.</inlineHelpText>
        <label>First Segment Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Introduction__c</fullName>
        <description>Introduction that can be printed on the generated PDF document.</description>
        <inlineHelpText>Introduction that can be printed on the generated PDF document.</inlineHelpText>
        <label>Introduction</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemCount__c</fullName>
        <description>Number of line items in this quote.</description>
        <inlineHelpText>Number of line items in this quote.</inlineHelpText>
        <label>Line Item Count</label>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>Total List Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>List Amount</label>
        <summarizedField>SBQQ__WebQuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__WebQuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items on this quote.</description>
        <inlineHelpText>Default markup rate applied to line items on this quote. You'll be able to override this value on group and line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master contract with which subscription products in this quote are to be co-terminated.</description>
        <inlineHelpText>Master contract with which subscription products in this quote are to be co-terminated.</inlineHelpText>
        <label>Master Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes</relationshipLabel>
        <relationshipName>CoTerminatedWebQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetAmount__c</fullName>
        <description>Total Net Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total Net Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>Net Amount</label>
        <summarizedField>SBQQ__WebQuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__WebQuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__Notes__c</fullName>
        <description>Notes printed on the generated PDF document.</description>
        <inlineHelpText>Notes printed on the generated PDF document.</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity being quoted.</description>
        <inlineHelpText>Opportunity being quoted.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the quote is an Amend Re-Quote this field points to the original quote.</description>
        <inlineHelpText>If this Quote record represents an Amend Re-Quote, use this field to link back to the original quote.</inlineHelpText>
        <label>Original Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>WebAmend: Re-Quotes</relationshipLabel>
        <relationshipName>WebChangeOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Discount extended to partner on this opportunity.</description>
        <inlineHelpText>Discount extended to partner on this opportunity.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote.</description>
        <inlineHelpText>Terms that govern payment of the items in this quote.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Price Book associated with this web quote.</description>
        <inlineHelpText>The Price Book associated with this web quote.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Web Quotes</relationshipLabel>
        <relationshipName>Web_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricebookId__c</fullName>
        <description>ID of the pricebook that should be used for this quote if opportunity is null.</description>
        <inlineHelpText>If this quote is not tied to an opportunity with a price book, this stores the price book ID for the quote.</inlineHelpText>
        <label>Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for the quote. This person's name will appear on the generated quote document.</description>
        <inlineHelpText>Primary contact for the quote. This person's name will appear on the generated quote document.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcessId__c</fullName>
        <description>ID of the quote process to use with this quote. This field is meant to be populated by a workflow rule.</description>
        <inlineHelpText>Guided selling process ID to use with this quote, if any.</inlineHelpText>
        <label>Quote Process Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplateId__c</fullName>
        <description>ID of quote template that must be used when generating documents from this quote.</description>
        <inlineHelpText>Stores a quote template ID if one is specified to use when generating quote PDF documents.</inlineHelpText>
        <label>Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularAmount__c</fullName>
        <description>Roll up of regular amounts of quote products.</description>
        <inlineHelpText>Total amount of non-optional line times before additional discounts are applied.</inlineHelpText>
        <label>Regular Amount</label>
        <summarizedField>SBQQ__WebQuoteLine__c.SBQQ__RegularTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__WebQuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__WebQuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales rep responsible for this quote if different from the user who owns the Quote record.</description>
        <inlineHelpText>Sales rep responsible for this quote if different from the user who owns the Quote record.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SelfServiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this web quote is self service.</description>
        <inlineHelpText>Indicates whether this web quote is self service.</inlineHelpText>
        <label>Self Serviced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCity__c</fullName>
        <description>City on the Ship To address for this quote.</description>
        <inlineHelpText>City on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCountry__c</fullName>
        <description>Country on the Ship To address for this quote.</description>
        <inlineHelpText>Country on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingName__c</fullName>
        <description>Name on the Ship To address for this quote.</description>
        <inlineHelpText>Name on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingPostalCode__c</fullName>
        <description>Postal Code on the Ship To address for this quote.</description>
        <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingState__c</fullName>
        <description>State/Province on the Ship To address for this quote.</description>
        <inlineHelpText>State/Province on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingStreet__c</fullName>
        <description>Street on the Ship To address for this quote.</description>
        <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__SignatureStatus__c</fullName>
        <description>Status of electronic signature.</description>
        <inlineHelpText>Status of electronic signature.</inlineHelpText>
        <label>Signature Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this quote.</description>
        <inlineHelpText>Start date for subscriptions in this quote.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>Status indicating where quote is in its lifecycle.</description>
        <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Subscription term used to prorate eligible products.</description>
        <inlineHelpText>Subscription term used to prorate eligible products.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetCustomerAmount__c</fullName>
        <description>Customer amount to be targeted in calculating additional discounts.</description>
        <inlineHelpText>Enter desired customer amount to automatically calculate additional discount on discountable line items.</inlineHelpText>
        <label>Target Customer Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalCustomerDiscountAmount__c</fullName>
        <description>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</description>
        <formula>SBQQ__ListAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</inlineHelpText>
        <label>Total Customer Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of quote.</description>
        <inlineHelpText>Type of quote.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Re-Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To display watermark in the Quote Document if checkbox is selected.</description>
        <inlineHelpText>Select the checkbox to display watermark in the Quote Document.</inlineHelpText>
        <label>Watermark Shown</label>
        <type>Checkbox</type>
    </fields>
    <description>Quote originated by external parties such as customers or partners from a Portal or Force.com Site. This object offers a subset of functionality of the full Quote object but does not require an Opportunity.</description>
    <label>Web Quote</label>
    <nameField>
        <displayFormat>WQ-{000000}</displayFormat>
        <label>Quote #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Account__c</columns>
        <columns>SBQQ__SalesRep__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>SBQQ__ListAmount__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>SBQQ__Invalid_First_Segment_Term_End_Date_WQ</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL(SBQQ__FirstSegmentTermEndDate__c)) &amp;&amp; NOT(ISNULL(SBQQ__StartDate__c)) &amp;&amp; (NOT(ISNULL(SBQQ__SubscriptionTerm__c)) || NOT(ISNULL(SBQQ__EndDate__c))) &amp;&amp;
(SBQQ__FirstSegmentTermEndDate__c &lt; SBQQ__StartDate__c || IF(NOT(ISNULL(SBQQ__EndDate__c)),SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__EndDate__c, IF(LOWER($Setup.SBQQ__GeneralSettings__c.SBQQ__SubscriptionTermUnit__c)='day', SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + SBQQ__SubscriptionTerm__c-1, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + (SBQQ__SubscriptionTerm__c * 30.4375))))</errorConditionFormula>
        <errorDisplayField>SBQQ__FirstSegmentTermEndDate__c</errorDisplayField>
        <errorMessage>First Segment Term End Date must fall between Quote Start Date and Quote End Date</errorMessage>
    </validationRules>
</CustomObject>